Scroll with overflow fixed

--- a/Client2/client/src/App.css
+++ b/Client2/client/src/App.css
@@ -84,11 +84,14 @@ img {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 10px 10px;
 }
 
 .min-width {
   min-width: 100px;
+}
+
+.middle {
+  margin: 1em auto;
 }
 
 .iconlist {
@@ -103,8 +106,6 @@ img {
 }
 
 .hoverExpand:hover {
-  position: relative;
-  background-color: default;
   transform: scale(1.1);
 }
 
@@ -224,7 +225,6 @@ img {
 }
 
 .social-icons a:hover {
-  color: #e6d4ca;
   transform: scale(1.2);
 }
 
@@ -232,8 +232,8 @@ img {
 
 .main-content {
   height: 100dvh;
-  overflow-y: scroll;
-
+  overflow-y: scroll clip;
+  overflow-x: visible;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   width: 80%;
@@ -317,7 +317,8 @@ img {
   grid-template-columns: repeat(3, 1fr);
 }
 
-@media (width <= 1200px) {
+.overflowNone {
+  overflow: visible;
 }
 
 .gap-1 {
@@ -361,4 +362,11 @@ img {
 .right-panel p {
   margin: 0;
   font-size: 16px;
+}
+
+@media (width < 1200px) {
+  .concert-images {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+  }
 }
